# apple-music-rich-presence

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: main.rs
