[package]
name = "apple-music-rich-presence"
version = "1.0.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
apple-music = { version = "0.11.3", git = "https://github.com/valentinegb/apple-music.git" }
daemonize = "0.5.0"
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git", rev = "5620e8901566290a583f9354205686b18628ba1b", version = "0.2.4" }
env_logger = "0.11.5"
log = "0.4.22"
sysinfo = { version = "0.31.2", default-features = false, features = ["system"] }
